--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
-spring.application.name=reservations
+spring.application.name=db-access
+spring.banner.location=classpath:/banner.txt
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
 spring.datasource.url=jdbc:postgresql://191.96.231.123:5432/flybook?currentSchema=flybook
 spring.datasource.username=jaags
 spring.datasource.password=jaags
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.banner.location=classpath:/banner.txt
