--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ spring-boot-starter/target/
 spring-boot-starter-*/target/
 !spring-boot-starter/src/main/
 !spring-boot-starter/src/test/
+application-local.properties
